created succesful import message and fixed nil variables being passed from functions giving nil errors, now an if checks if the variable is empty and then returns an empty string if it is, instead of the nil variable

--- a/app/views/protocols/index.html.erb
+++ b/app/views/protocols/index.html.erb
@@ -136,8 +136,8 @@
   </div>
 <% end %>
 <div id="protocolsio-preview-modal-target"></div>
+<div id="protocolsio-results-modal-target"></div>
 <%= render partial: "protocols/import_export/import_json_protocol_modal.html.erb" %>
-
 <%= render partial: "protocols/index/create_new_modal.html.erb" %>
 <%= render partial: "protocols/index/make_private_results_modal.html.erb" %>
 <%= render partial: "protocols/index/publish_results_modal.html.erb" %>
