--- a/app/views/protocols/import_export/_import_json_protocol_preview_modal.html.erb
+++ b/app/views/protocols/import_export/_import_json_protocol_preview_modal.html.erb
@@ -300,3 +300,11 @@
       </div>
     </div>
   </div>
+<%#
+  <div data-template="table" style="display: none;">
+    <div>
+      <strong data-val="name"></strong>
+    </div>
+    <div data-hold="table"></div>
+  </div>
+  %>
