--- a/app/views/protocols/import_export/_import_json_protocol_s_desc.html.erb
+++ b/app/views/protocols/import_export/_import_json_protocol_s_desc.html.erb
@@ -42,11 +42,11 @@
             when '1' %>
               <% step_info_string += (key['data']) %>
               <br><strong><%= t('protocols.protocols_io_import.preview.strng_s_desc') %></strong>
-              <%=sanitize_input(string_html_table_remove(key['data']).html_safe)%><br>
+              <%=sanitize_input(string_html_table_remove(key['data']).html_safe, ['img'])%><br>
             <% when '17' %>
               <% step_info_string += (key['data']) %>
               <br><strong><%= t('protocols.protocols_io_import.preview.s_exp_res') %></strong>
-              <%=sanitize_input(string_html_table_remove(key['data']).html_safe)%>
+              <%=sanitize_input(string_html_table_remove(key['data']).html_safe, ['img'])%>
               <br>
             <% end %>
           <% elsif key && whitelist_complex.include?(key['component_type_id']) %>
@@ -71,7 +71,7 @@
               <% step_info_string += key['source_data']['name'] %>
               <br>
               <strong><%= key['name']+': ' %></strong>
-              <%= sanitize_input(string_html_table_remove(key['source_data']['name']).html_safe) %>
+              <%= sanitize_input(string_html_table_remove(key['source_data']['name']).html_safe, ['img']) %>
               <br><%= t('protocols.protocols_io_import.preview.s_link') %>
               <%= sanitize_input(key['source_data']['link'].html_safe) %>
             <% when '15'%>
@@ -80,7 +80,7 @@
               <strong><%= key['name']+': ' %></strong>
               <%=  sanitize_input(key['source_data']['name'].html_safe) %>
               <br><%= t('protocols.protocols_io_import.preview.s_desc') %>
-              <%= sanitize_input(string_html_table_remove(key['source_data']['description']).html_safe) %>
+              <%= sanitize_input(string_html_table_remove(key['source_data']['description']).html_safe, ['img']) %>
               <br><%= t('protocols.protocols_io_import.preview.os') %>
               <%= sanitize_input(key['source_data']['os_name'].html_safe)+
               ' , '+sanitize_input(key['source_data']['os_version'].html_safe) %>
@@ -98,7 +98,7 @@
               <% step_info_string += key['source_data']['body'] %>
               <br>
               <strong><%= key['name']+': ' %></strong>
-              <%= sanitize_input(string_html_table_remove(key['source_data']['body']).html_safe) %>
+              <%= sanitize_input(string_html_table_remove(key['source_data']['body']).html_safe, ['img']) %>
               <br><%= t('protocols.protocols_io_import.preview.s_link') %>
               <%= sanitize_input(key['source_data']['link'].html_safe) %>
             <% when '20'%>
