work from macbook that doenst support docer, only for manual code copying

--- a/app/views/protocols/import_export/_import_json_protocol_p_desc.html.erb
+++ b/app/views/protocols/import_export/_import_json_protocol_p_desc.html.erb
@@ -17,6 +17,7 @@
       <div data-val="description" class="ql-editor">
         <br>
         <% prot_info_string = '' %>
+        <% @remaining = 10000 %>
         <% protocol_table_elements_array = [] %>
         <% if json_object['description'].present? %>
           <% prot_info_string += (json_object['description']) %>
