--- a/app/views/protocols/import_export/_import_json_protocol_preview_modal.html.erb
+++ b/app/views/protocols/import_export/_import_json_protocol_preview_modal.html.erb
@@ -30,7 +30,7 @@
 
           <label><%= t('protocols.import_export.import_modal.name_label') %></label>
 
-          <%= f.text_field :name, :value => pio_eval_title_len(sanitize_input(@json_object['protocol_name'])), class:
+          <%= f.text_field :name, :value => @json_object['protocol_name'], class:
           "form-control" %>
         </div>
         <div class="form-group">
@@ -38,14 +38,15 @@
             <span class="glyphicon glyphicon-user">
             </span>&nbsp;<%= t('protocols.import_export.import_modal.authors_label') %>
           </label>
-          <%= f.text_field :authors, :value => pio_eval_title_len(sanitize_input(@json_object['full_name'])), class:
+          <%= f.text_field :authors, :value => @json_object['full_name'], class:
           "form-control" %>
 
         </div>
         <div class="form-group">
           <label><%= t('protocols.import_export.import_modal.description_label') %></label>
-          <%= f.text_area :description_notice, :value => t('protocols.protocols_io_import.import_description_notice'), class:
-          "form-control",readonly: true %>
+
+          <%= f.text_area :description, :value => @json_object['description'], class:
+          "form-control" %>
         </div>
         <div class="form-group">
           <div class="row">
